log
Thu Apr 16 08:05:01 PM UTC 2026: 
 hashmap.c | 81 +++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 71 insertions(+), 10 deletions(-)
 tests:  17|0
total_score: 60/60
59bfec4
Thu Apr 16 08:06:45 PM UTC 2026: 
 hashmap.c | 78 +++++----------------------------------------------------------
 1 file changed, 6 insertions(+), 72 deletions(-)
 tests:  0|7
total_score: 0/60
e7bf962
Thu Apr 16 08:10:28 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:16: error: too few arguments to function ‘hash’
   62 |     long pos = hash(key);
      |                ^~~~
hashmap.c:28:6: note: declared here
   28 | long hash( char * key, long capacity) {
      |      ^~~~
0192c5a
Thu Apr 16 08:11:21 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
b744a47
Thu Apr 16 08:14:50 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
edd4197
Thu Apr 16 08:29:15 PM UTC 2026: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/60
3bfe4db
Thu Apr 16 08:31:07 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:71:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   71 |     map->bucket[pos] = nuevo;
      |          ^~~~~~
      |          buckets
5741811
Thu Apr 16 08:31:20 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|7
total_score: 0/60
1195559
Thu Apr 16 08:32:14 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
29960d2
Thu Apr 16 08:32:29 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|7
total_score: 0/60
335b5c8
Thu Apr 16 08:33:38 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|7
total_score: 0/60
addc031
Thu Apr 16 08:35:10 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|7
total_score: 0/60
356d87d
Thu Apr 16 08:38:10 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|6
total_score: 5/60
2e8ef36
Thu Apr 16 08:40:28 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
40900f6
